Moved tests out from core
Signed-off-by: Guian Gumpac <guian.gumpac@improving.com>